# FastCat

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checkup.yml
crates/fastcat/: Cargo.toml
crates/fastcat-bench/: Cargo.toml
crates/fastcat-bench/benches/: concat.rs
crates/fastcat-macro/: Cargo.toml
crates/fastcat-macro/src/: fold.rs  lib.rs  parse.rs
crates/fastcat/src/: lib.rs
